--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,13 @@
-Source: gtkdialog-slax
+Source: gtkask
 Section: unknown
 Priority: optional
 Maintainer: crims0n <crims0n@minios.dev>
 Build-Depends: debhelper-compat (= 13), libgtk2.0-dev
 Standards-Version: 4.5.1
-Homepage: https://github.com/minios-linux/gtkdialog-slax.git
+Homepage: https://github.com/minios-linux/gtkask.git
 Rules-Requires-Root: no
 
-Package: gtkdialog-slax
+Package: gtkask
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: gtkdialog
 Description: Simple GTK2 dialog for Yes/No questions.
